idf_component_register(
    SRCS 
        "src/indcpa.c"
        "src/kem.c"
        "src/ntt.c"
        "src/poly.c"
        "src/polyvec.c"
        "src/reduce.c"
        "src/symmetric-shake.c"
        "src/verify.c"
        "src/cbd.c"
        "src/fips202.c"
        "src/randombytes.c"
        "src/kyber_utils.c"
    INCLUDE_DIRS "include"
)

